# PlantAI

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  TODO.md  ci.yml  compile_to_orangepi5.py  config.py  docker-compose.yaml  example.env  graph.ipynb  orange.py  plants.json  proto.ipynb  prototype.py  pyproject.toml  repo-exploration.md  universe.py  vllm.sh
agents/: __init__.py  dummy.py  plant.py  vincent_maloy.json
agents/shared/: individuals.py  research.py
agents/tools/: __init__.py  plant.py  progmancer.py
graphs/: __init__.py  nodes.py  routers.py  states.py
graphs/carie/: __init__.py  nodes.py  states.py
knowledge/: care.py  care_guides.py  database.py  schemas.py  tools.py
llms/: agent_with_memory.ipynb  hf.py  ollama.py  openai.py  remote.py
notebooks/: _gpt.ipynb  _mistral.ipynb  _ollama.ipynb  _prototype.ipynb  _zephyr.ipynb  agent.ipynb  graph.ipynb
plantai/agents/: __init__.py  carie.py
plantai/agents/demeter/: __init__.py  graph.py  tools.py
plantai/llms/: __init__.py  ollama.py  openai.py
plants/: __init__.py  _arduino.py  my-plants.md  schemas.py  tools.py
plants/io/: arduino.json  arduino.py  file.json  file.py  local_plants.json
plants/repositories/: __init__.py  _base.py  arduino.py  file.py
tests/carie/: affirmation.py  test__carie.py  test_carie.py  test_tool_selection.py
tests/plantai/agents/: __init__.py  test_carie.py  test_demeter.py  test_tasks.py
tests/plants/: factories.py  test_arduino.py
tests/plants/io/: factories.py  test_arduino.py
tests/plants/repositories/arduino/: assertions.py  conftest.py  test_create.py  test_get_plant.py  test_list_plants.py
tools/plants/: __init__.py  schemas.py
